--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,10 +14,6 @@ $mid: 500px;
 
 .user-info-card{
 	position: fixed !important;
-	z-index: -1;
+	z-index: 1;
 	display: block;
-}
-
-z-index-minus-1{
-	z-index: -1;
 }
